# hexseg

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: bkn_precincts.gpkg  cleveland_districts.gpkg  cleveland_districts.parquet  cleveland_police.parquet  cleveland_roads.parquet
notebooks/: 01‐hexagon‐workflow.ipynb
src/: core.py
src/hexseg/: core.py
tests/: test_core.py
